# yt-subtranslate

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
compositor/: __init__.py  ffmpeg_compositor.py
config/: settings.py
demo/: 01-yt_dlp_download_demo.py  02-subtitle_extraction_demo.py  03-translation_demo.py  04-video_composition_demo.py  05-cli_integration_demo.py
downloader/: __init__.py  ytdlp_downloader.py
models/: __init__.py  types.py
pipeline/: pipeline.py
subtitler/: __init__.py  base.py  whisper_subtitle.py  ytdlp_subtitle.py
translator/: __init__.py  base.py  deepseek_translator.py  openai_translator.py
utils/: __init__.py  cache.py  file_utils.py  logger.py  retry.py  time_utils.py
