[project]
name = "yt-subtranslate"
version = "0.1.0"
description = "YouTube video downloader with AI subtitle translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.36.0",
    "openai-whisper>=20250625",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
